# bc-rust

./: .editorconfig  .git-blame-ignore-revs  .gitattributes  3RDPARTY.txt  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LICENSE.md  QUALITY_AND_STYLE.md  README.md  SECURITY.md  alpha_0.1.2_release_notes.md  coming_soon.md
.github/workflows/: publish_doc_benches_to_ghpages.yaml  rust-style.yml
cli/: Cargo.toml
cli/src/: encoders_cmd.rs  helpers.rs  hkdf_cmd.rs  mac_cmd.rs  main.rs  mldsa_cmd.rs  mlkem_cmd.rs  rng_cmd.rs  sha2_cmd.rs  sha3_cmd.rs
crypto/ascon/: Cargo.toml
crypto/ascon/benches/: ascon_benches.rs
crypto/ascon/src/: ascon_aead128.rs  ascon_cxof128.rs  ascon_hash256.rs  ascon_xof128.rs  lib.rs  state.rs
crypto/ascon/tests/: aead_framework.rs  test_vector.rs
crypto/ascon/tests/data/: LWC_AEAD_KAT_128_128.txt
crypto/base64/: Cargo.toml
crypto/base64/benches/: base64_benches.rs
crypto/base64/src/: lib.rs
crypto/base64/tests/: base64_tests.rs
crypto/core/: Cargo.toml
crypto/core-interface/src/: errors.rs  key_material.rs  traits.rs
crypto/core-interface/tests/: key_material_tests.rs  trait_tests.rs
crypto/core-test-framework/: Cargo.toml  readme.md
crypto/core-test-framework/src/: aead.rs  hash.rs  kdf.rs  kem.rs  lib.rs  mac.rs  signature.rs  symmetric_ciphers.rs
crypto/core/src/: errors.rs  key_material.rs  lib.rs  traits.rs
crypto/core/tests/: key_material_tests.rs  trait_tests.rs
crypto/factory/: Cargo.toml
crypto/factory/src/: hash_factory.rs  kdf_factory.rs  lib.rs  mac_factory.rs  rng_factory.rs  xof_factory.rs
crypto/factory/tests/: hash_factory_tests.rs  kdf_factory_tests.rs  mac_factory_tests.rs  rng_factory_tests.rs
crypto/hex/benches/: hex_benches.rs
crypto/hex/src/: lib.rs
crypto/hex/tests/: hex_tests.rs
crypto/hkdf/: Cargo.toml
crypto/hkdf/benches/: hkdf_benches.rs
crypto/hkdf/src/: lib.rs
crypto/hkdf/tests/: hkdf_tests.rs
crypto/hmac/: Cargo.toml
crypto/hmac/benches/: hmac_benches.rs
crypto/hmac/src/: lib.rs
crypto/hmac/tests/: hmac_tests.rs
crypto/ml-dsa/: notes.md
crypto/ml-dsa-mikeo/: Cargo.toml
crypto/ml-dsa-mikeo/src/: aux_functions.rs  lib.rs  matrix.rs  mldsa.rs  mldsa_keys.rs  polynomial.rs
crypto/ml-dsa-mikeo/tests/: ml_dsa_tests.rs
crypto/ml-dsa-nursery-version/: Cargo.toml  mldsa_api_notes.md
crypto/ml-dsa-nursery-version/src/: encodings.rs  lib.rs  mldsa.rs  mldsa_keys.rs  ntt.rs  poly_vec_k.rs  poly_vec_l.rs  poly_vec_matrix.rs  polynomial.rs  reduce.rs  rounding.rs  symmetric.rs
crypto/mldsa/: Cargo.toml  mldsa_api_notes.md
crypto/mldsa-lowmemory/: Cargo.toml
crypto/mldsa-lowmemory/benches/: mldsa_benches.rs
crypto/mldsa-lowmemory/src/: aux_functions.rs  hash_mldsa.rs  lib.rs  low_memory_helpers.rs  mldsa.rs  polynomial.rs
crypto/mldsa-lowmemory/tests/: bc_test_data.rs  mldsa_key_tests.rs  wycheproof.rs
crypto/mldsa-mikeo/: Cargo.toml
crypto/mldsa-mikeo/benches/: mldsa_benches.rs
crypto/mldsa-mikeo/src/: aux_functions.rs  hashmldsa.rs  lib.rs  matrix.rs  mldsa.rs  mldsa_keys.rs  params_playground.rs  polynomial.rs
crypto/mldsa-mikeo/tests/: ml_dsa_tests.rs
crypto/mldsa-mikeo/tests/data/: PQCsignKAT_ml_dsa_44.rsp  PQCsignKAT_ml_dsa_65.rsp  PQCsignKAT_ml_dsa_87.rsp
crypto/mldsa/benches/: mldsa_benches.rs
crypto/mldsa/src/: aux_functions.rs  hash_mldsa.rs  hashmldsa.rs  lib.rs  matrix.rs  mldsa.rs  mldsa_keys.rs  polynomial.rs
crypto/mldsa/tests/: bc_test_data.rs  hash_mldsa_tests.rs  ml_dsa_key_tests.rs  (+4 more)
crypto/mldsa_lowmemory/: Cargo.toml
crypto/mldsa_lowmemory/benches/: mldsa_benches.rs  note_on_mem_usage_benches.md
crypto/mldsa_lowmemory/src/: aux_functions.rs  hash_mldsa.rs  lib.rs  low_memory_helpers.rs  mldsa.rs  mldsa_keys.rs  polynomial.rs
crypto/mldsa_lowmemory/tests/: bc_test_data.rs  hash_mldsa_tests.rs  ml_dsa_key_tests.rs  ml_dsa_tests.rs  mldsa_key_tests.rs  mldsa_tests.rs  wycheproof.rs
crypto/mlkem/: Cargo.toml
crypto/mlkem/benches/: mlkem_benches.rs
crypto/mlkem/src/: aux_functions.rs  lib.rs  matrix.rs  mlkem.rs  mlkem_keys.rs  polynomial.rs
crypto/mlkem/tests/: bc_test_data.rs  mlkem_key_tests.rs  mlkem_tests.rs  wycheproof.rs
crypto/mlkem_lowmemory/: Cargo.toml
crypto/rng/: Cargo.toml
crypto/sha3/: Cargo.toml
crypto/utils/: Cargo.toml
mem_usage_benches/: Cargo.toml  bench_mldsa_mem_usage.rs  bench_mlkem_mem_usage.rs  lib.rs
src/: Cargo.toml  bench_mldsa_mem_usage.rs  lib.rs  rustfmt.toml
(+39 files in other folders)
