[package]
name = "bouncycastle-ascon"
version = "0.1.1"
edition.workspace = true

[dependencies]
bouncycastle-core-interface.workspace = true
bouncycastle-utils.workspace = true

[dev-dependencies]
bouncycastle-core-test-framework.workspace = true
bouncycastle-hex.workspace = true
criterion.workspace = true

[[bench]]
name = "ascon_benches"
harness = false
