[package]
name = "bouncycastle-base64"
version = "0.1.1"
edition.workspace = true

[dependencies]
bouncycastle-core.workspace = true
bouncycastle-utils.workspace = true

[dev-dependencies]
criterion.workspace = true
bouncycastle-rng.workspace = true

[[bench]]
name = "base64_benches"
harness = false