[package]
name = "bouncycastle-ml-dsa-mikeo"
version = "0.1.2"
edition.workspace = true

[dependencies]
#do_while.workspace = true # todo -- delete
bouncycastle-core-interface.workspace = true
bouncycastle-sha3.workspace = true
bouncycastle-utils.workspace = true

[dev-dependencies]
bouncycastle-hex.workspace = true
bouncycastle-rng.workspace = true
